# elometry

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCURL.cmake  FindGLPK.cmake
db/: data.sql  user.sql
include/: CSVReader.h
include/gui/: MainWindow.h  Models.h  PlayerListView.h  TeamManagerView.h
include/gui/components/: ClubSelectDialog.h  DataLoader.h  DraggableListWidget.h  LineupCreationDialog.h  LineupPitchView.h  LineupView.h  PlayerComparisonDialog.h  PlayerHistoryDialog.h  PlayerPositionWidget.h  PlayerSelectDialog.h  TeamSelectDialog.h
include/gui/components/dialogs/: ClubSelectDialog.h  LineupCreationDialog.h  PlayerComparisonDialog.h  PlayerHistoryDialog.h  PlayerSelectDialog.h  TeamSelectDialog.h
include/gui/components/widgets/: DraggableListWidget.h  PlayerPositionWidget.h
include/gui/models/: LineupTypes.h  Models.h  PlayerListModel.h  PlayerSelectModel.h  TeamListModel.h  TeamSelectModel.h
include/gui/views/: LineupPitchView.h  LineupView.h  LoadingView.h  MainWindow.h  PlayerListView.h  SettingsView.h  TeamManagerView.h
include/models/: ILPSelector.h  PlayerRating.h
include/services/: RatingManager.h  TeamManager.h
include/utils/: DataLoader.h  Database.h  KaggleAPI.h  Season.h
include/utils/database/: Database.h  PlayerMapper.h
include/utils/database/repositories/: AppearanceRepository.h  ClubRepository.h  GameRepository.h  PlayerRepository.h  TeamRepository.h
src/: CSVReader.cpp  main.cpp
src/csv/: CSVReader.cpp
src/gui/: ClubSelectDialog.cpp  MainWindow.cpp  Models.cpp  PlayerListView.cpp  TeamManagerView.cpp
src/gui/components/: ClubSelectDialog.cpp  DataLoader.cpp  DraggableListWidget.cpp  LineupCreationDialog.cpp  LineupPitchView.cpp  LineupView.cpp  PlayerComparisonDialog.cpp  PlayerHistoryDialog.cpp  PlayerPositionWidget.cpp  PlayerSelectDialog.cpp  TeamSelectDialog.cpp
src/gui/components/dialogs/: ClubSelectDialog.cpp  LineupCreationDialog.cpp  PlayerComparisonDialog.cpp  PlayerHistoryDialog.cpp  PlayerSelectDialog.cpp  TeamSelectDialog.cpp
src/gui/components/widgets/: DraggableListWidget.cpp  PlayerPositionWidget.cpp
src/gui/models/: Models.cpp  PlayerListModel.cpp  PlayerSelectModel.cpp  TeamListModel.cpp  TeamSelectModel.cpp
src/gui/resources/: resources.qrc
src/gui/styles/: styles.qss
src/gui/views/: LineupPitchView.cpp  LineupView.cpp  LoadingView.cpp  MainWindow.cpp  PlayerListView.cpp  SettingsView.cpp  TeamManagerView.cpp
src/models/: ILPSelector.cpp  PlayerRating.cpp
src/services/: RatingManager.cpp  TeamManager.cpp
src/utils/: DataLoader.cpp  KaggleAPI.cpp
src/utils/Database/: Database.cpp
src/utils/database/: Database.cpp  PlayerMapper.cpp
src/utils/database/repositories/: AppearanceRepository.cpp  ClubRepository.cpp  GameRepository.cpp  PlayerRepository.cpp  TeamRepository.cpp
